--- a/netty-tcp-web/pom.xml
+++ b/netty-tcp-web/pom.xml
@@ -160,14 +160,20 @@
 	    <artifactId>kaptcha</artifactId>
 	    <version>2.3.2</version>
 	</dependency>
- 
+ 	<!--		
 	<dependency>
 	    <groupId>log4j</groupId>
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
-	</dependency>
+	</dependency>-->
  
-
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.11.1</version>
+	</dependency>
+	  
 	<dependency>
 	    <groupId>org.mybatis</groupId>
 	    <artifactId>mybatis</artifactId>
